bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__request_user_input__tests__request_user_input_multi_question_last.snap
---
source: bin/xserver/src/bottom_pane/request_user_input.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 2/2 (2 unanswered)                                                                                           
  Share details.                                                                                                        
                                                                                                                        
  › Type your answer (optional)                                                                                         
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter to submit all | ctrl + p / ctrl + n change question | esc to interrupt
