bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__request_user_input__tests__request_user_input_tight_height.snap
---
source: bin/console/src/bottom_pane/request_user_input.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 1/1 (1 unanswered)                                                                                           
  Choose an option.                                                                                                     
                                                                                                                        
  › 1. Option 1  First choice.                                                                                          
    2. Option 2  Second choice.                                                                                         
    3. Option 3  Third choice.                                                                                          
                                                                                                                        
  tab to add notes | enter to submit answer | esc to interrupt
